syntax = "proto3";

package tinee;

option go_package = "tinee/pkg/pb";

// API for shortening URLs.
service TineeURL {
  // Shortens URL.
  rpc Shorten(ShortenRequest) returns (ShortenResponse);
  // Returns URL that corresponds to alias from request.
  rpc UrlByAlias(UrlByAliasRequest) returns (UrlByAliasResponse);
}

// Shortening URL request.
message ShortenRequest {
  // URL to shorten.
  string url = 1;
  // Optional custom alias for URL.
  string alias = 2;
}

// Shortening URL response.
message ShortenResponse {
  // Shortened URL.
  string tinee_url = 1;
}

// Retrieving URL by alias request.
message UrlByAliasRequest {
  // Alias of the URL.
  string alias = 1;
}

// Retrieving URL by alias response.
message UrlByAliasResponse {
  // URL alias corresponds to.
  string url = 2;
}
